<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="action_settings">Settings</string>
    <string name="submit_button">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_learners">Learning Leaders</string>
    <string name="skill_iq">Skill IQ Leaders</string>
    <string name="placeholder_first_name">First Name</string>
    <string name="placeholder_last_name">Last Name</string>
    <string name="placeholder_email">Email Addresss</string>
    <string name="placeholder_project_link">Project on GITHUB (link)</string>
    <string name="project_submission_title">Project Submission</string>
    <string name="submission_title">Project Submission</string>
    <string name="question">Are you Sure?</string>
    <string name="response_success_message">Submission Successful</string>
    <string name="response_failure_message">Submission not Successuful</string>
    <string name="custom_error_message">Failed to retrieve leaderboards</string>
</resources>
